--- a/acados_/mpcc_acados_generated_code/Makefile
+++ b/acados_/mpcc_acados_generated_code/Makefile
@@ -37,6 +37,7 @@
 
 
 ACADOS_FLAGS = -fPIC -std=c99   #-fno-diagnostics-show-line-numbers -g
+ACADOS_FLAGS += -DACADOS_WITH_OSQP
 # # Debugging
 # ACADOS_FLAGS += -g3
 
